Fix some minor spacing issues

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -48,7 +48,7 @@ $text-color: $black;
 // Avatar
 
 $avatar-default-size: 30px;
-$avatar-default-font-size: 18px;
+$avatar-default-font-size: 12px;
 
 // Btn
 
